https://github.com/ShapeChange/ShapeChange/issues[GitHub].

[[Overview]]
== Overview

The following table lists the official releases of ShapeChange together
with additional information including dependencies.

[cols=",,,,,",]
|===
|ShapeChange Release Version |Java Version(s) |Tested EA Version(s) NOTE
A) |EA API included in distribution NOTE B) |Saxon JAR used C) |Comments

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.11.0/ShapeChange-2.11.0.zip[2.11.0]
|Java 11 |EA 15.2 |EA 15.2.1554 |Saxon-HE-10.2.jar |

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.10.0/ShapeChange-2.10.0.zip[2.10.0]
|Java 11 |EA 15.2 |EA 15.2.1554 |Saxon-HE-10.2.jar |

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.9.1/ShapeChange-2.9.1.zip[2.9.1]
|Java 11 |EA 14.1 |EA 14.1.1428 |Saxon-HE-9.9.1-6.jar | 

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.9.0/ShapeChange-2.9.0.zip[2.9.0]
|Java 11 |EA 14.1 |EA 14.1.1428 |Saxon-HE-9.9.1-6.jar | 

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.8.0/ShapeChange-2.8.0.zip[2.8.0]
|Java 1.8 |EA 14.1 |EA 14.1.1428 |Saxon-HE-9.5.1-1.jar | 

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.7.0/ShapeChange-2.7.0.zip[2.7.0]
|Java 1.8 |EA 13.5 |EA 13.5.1351 |Saxon-HE-9.5.1-1.jar | 

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.6.0/ShapeChange-2.6.0.zip[2.6.0]
|Java 1.8 |EA 13.5 |EA 13.5.1351 |Saxon-HE-9.5.1-1.jar | 

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.5.1/ShapeChange-2.5.1.zip[2.5.1]
|Java 1.8 |EA 13.5 |EA 13.5.1351 |Saxon-HE-9.5.1-1.jar | 

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.5.0/ShapeChange-2.5.0.zip[2.5.0]
|Java 1.8 |EA 13.5 |EA 13.5.1351 |Saxon-HE-9.5.1-1.jar | 

|https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.4.0/ShapeChange-2.4.0.zip[2.4.0]
|Java 1.8 |EA 13.5 |EA 13.5.1351 |Saxon-HE-9.5.1-1.jar | 
