@@ -40,8 +40,7 @@ To start using ShapeChange, follow these steps:
 |===
 |1 |Verify that you are using the *Java Runtime Environment 11* or later.
 
-|2
-|#TODO - where to publish future releases?# https://shapechange.net/resources/dist/net/shapechange/ShapeChange/2.11.0/ShapeChange-2.11.0.zip[Download ShapeChange (all platforms; version 2.11.0 14 December 2021)] xref:./Release_Notes.adoc[Release Notes]
+|2 |https://shapechange.net/resources/dist/net/shapechange/ShapeChange/{project-version}/ShapeChange-{project-version}.zip[Download ShapeChange (all platforms; version {project-version})] xref:./Release_Notes.adoc[Release Notes]
 
 |3 |*Unpack the ZIP archive*. An overview of the contents of the archive can be found xref:./Distribution_contents.adoc[here]. Use a path without whitespace in filenames as the XSLT processor currently used by ShapeChange cannot handle such path names properly.
 
@@ -67,9 +66,7 @@ xref:../targets/Output_Targets.adoc#Apply_XSL_Transformation[XSL transformations
 
 To test the installation, open a shell / DOS box and make the unzipped folder your current directory. Execute
 
-#TODO - reference resources on GitHub?#
-
-_java -jar ShapeChange-2.11.0.jar -Dfile.encoding=UTF-8 -c https://shapechange.net/resources/test/testXMI.xml_
+_java -jar ShapeChange-{project-version}.jar -Dfile.encoding=UTF-8 -c https://shapechange.net/resources/test/testXMI.xml_
 
 You should now see the following information message:
 
@@ -83,13 +80,9 @@ After the execution is complete, you will find
 
 To test the access to Enterprise Architect models (note that this test requires Enterprise Architect and can be executed only on Windows), execute
 
-#TODO - reference resources on GitHub?#
-
-_java -jar ShapeChange-2.11.0.jar -Dfile.encoding=UTF-8 -c https://shapechange.net/resources/test/testEA.xml_
+_java -jar ShapeChange-{project-version}.jar -Dfile.encoding=UTF-8 -c https://shapechange.net/resources/test/testEA.xml_
 
 You should see the same results as in the XMI test, except that the results are written into the folder _test/ea_.
-
-#TODO - reference resources on GitHub?#
 
 Sample reference results can be found at https://shapechange.net/resources/test/xmi/[https://shapechange.net/resources/test/xmi] and https://shapechange.net/resources/test/ea/[https://shapechange.net/resources/test/ea].
 
