@@ -1,0 +1,5 @@
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://shapechange.github.io/ShapeChange/${project.version}/</title>
+<meta http-equiv="refresh" content="0; URL=https://shapechange.github.io/ShapeChange/${project.version}/">
+<link rel="canonical" href="https://shapechange.github.io/ShapeChange/${project.version}/">
